--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,6 +17,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: #000000;
+  font-weight: bold;
+}
+
+a.active {
+  color: #146695;
+  font-weight: bold;
 }
 
 @media (prefers-color-scheme: dark) {
