--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -21,13 +21,39 @@ a {
 
 .link-menu {
   @apply text-black;
-  font-weight: bold;
+  @apply font-bold;
 }
 
 .link-menu.active,
 .link-menu:hover {
   @apply text-secondary;
   @apply font-bold;
+}
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    @apply w-3;
+    @apply h-5;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    @apply bg-primary;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-grey;
+    border-radius: 100vh;
+    border: 3px solid #d1d1d1;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-grey;
+  }
+}
+
+.video-container {
+  height: 557px;
 }
 
 /* @media (prefers-color-scheme: dark) {
