--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -53,15 +53,30 @@ a {
 }
 
 .video-container {
-  height: 557px;
+  height: 600px;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
+.carousel-home {
+  min-height: 650px;
+}
+
+.bg-carousel {
+  position: relative;
+  background: linear-gradient(
+      to left,
+      rgba(255, 255, 255, 0) 20%,
+      rgba(255, 255, 255, 1)
+    ),
+    url("/images/demo-carousel.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-attachment: fixed; */
+}
+
+svg {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 10vw;
+}
