--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -74,3 +74,11 @@ a {
   /* background-attachment: fixed; */
 }
 
+.bg-footer {
+  height: 600px;
+  position: relative;
+  background: url("/images/demo-footer.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
