--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -80,3 +80,34 @@ svg {
   width: 100%;
   height: 10vw;
 }
+
+.banner {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 65px;
+}
+
+.banner img {
+  width: 100%;
+}
+
+.banner p {
+  position: absolute;
+  font-size: 3.2rem;
+  font-weight: bold;
+  margin-bottom: 7.2rem;
+}
+
+.rotated-banner {
+  position: absolute;
+  display: block;
+  width: 100%;
+  min-height: 150%;
+  background: #ffff;
+  transform: rotate(-7deg);
+  top: 76%;
+}
