implement menu article and edit css class rotated-banner

--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -22,6 +22,7 @@ a {
 .link-menu {
   @apply text-black;
   @apply font-bold;
+  cursor: pointer;
 }
 
 .link-menu.active,
@@ -117,5 +118,19 @@ a {
   min-height: 150%;
   background: #ffff;
   transform: rotate(-7deg);
-  top: 76%;
+  top: 74%;
+  left: 5%;
+}
+
+.menu {
+  list-style-type: none;
+}
+
+.menu li {
+  padding: 12px 10px;
+  border-bottom: 1px solid #cfd2cf;
+}
+
+.menu li:nth-child(1) {
+  border-top: 1px solid #cfd2cf;
 }
