implement video page and edit style select box

--- a/dev-mountain/styles/globals.css
+++ b/dev-mountain/styles/globals.css
@@ -92,6 +92,7 @@ a {
 
 .banner {
   position: relative;
+  display: block;
   overflow: hidden;
   display: flex;
   flex-flow: column;
@@ -113,13 +114,12 @@ a {
 
 .rotated-banner {
   position: absolute;
-  display: block;
-  width: 100%;
+  width: 150%;
   min-height: 150%;
   background: #ffff;
-  transform: rotate(-7deg);
-  top: 74%;
-  left: 5%;
+  transform: rotate(-6deg);
+  top: 69%;
+  left: -5%;
 }
 
 .menu {
@@ -134,3 +134,13 @@ a {
 .menu li:nth-child(1) {
   border-top: 1px solid #cfd2cf;
 }
+
+select {
+  padding: 10px 20px;
+  width: 100%;
+  border: 2px solid #daeaf1;
+  border-radius: 20px;
+  margin-right: 24px;
+}
+
+
